# deer-code

./: .gitignore  CLAUDE.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_AGENT_TODO_IMPLEMENTATION.md  WORKFLOW_ANALYSIS.md  WORKFLOW_INDEX.md  config.example.yaml  langgraph.json  pyproject.toml  pytest.ini  research_agent_todo_example.py
docs/: ARCHITECTURE.md  BUSINESS.md  FRAMEWORKS.md  PACKAGES.md  RESEARCH_AGENT_ROADMAP.md
examples/: research_agent_with_todos.py
src/deer_code/: __init__.py  logging_config.py
src/deer_code/agents/: __init__.py  coding_agent.py  config.py  research_agent.py  state.py
src/deer_code/cli/: app.py
src/deer_code/config/: __init__.py
src/deer_code/models/: chat_model.py
src/deer_code/project/: __init__.py  detector.py
src/deer_code/prompts/templates/: coding_agent.md  research_agent.md
src/deer_code/tools/: __init__.py  error_handler.py  reminders.py  tool_groups.py
src/deer_code/tools/edit/: __init__.py  path_validator.py  text_editor.py  tool.py
src/deer_code/tools/fs/: grep.py  ls.py  tree.py
tests/: README.md  __init__.py  conftest.py  test_project.py
tests/agents/: test_state.py
tests/config/: test_config.py
tests/prompts/: test_template.py
tests/tools/: __init__.py
tests/tools/edit/: test_path_validator.py  test_text_editor.py
tests/tools/fs/: conftest.py  test_fs_tools.py
tests/tools/search/: __init__.py  test_tavily_search.py
tests/tools/terminal/: conftest.py  test_bash_terminal.py  test_command_validator.py
tests/tools/todo/: __init__.py  test_types.py
(+7 files in other folders)
