[project]
name = "deer-code"
version = "0.1.0"
description = "A minimalist yet sufficient project for enabling everyone to learn how to develop an AI Coding Agent."
readme = "README.md"
authors = [
    { name = "Henry Li", email = "henry1943@163.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-deepseek>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain[openai]>=1.0.1",
    "langgraph>=1.0.1",
    "pexpect>=4.9.0",
    "pydantic>=2.12.2",
    "rich>=14.2.0",
    "tavily-python>=0.5.0",
    "textual>=6.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
deer-code = "deer_code.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
